whole flow works. TODO : add tests

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="blue_100">#BBDEFB</color>
     <color name="blue_200">#51686E</color>
     <color name="green_a400">#00E676</color>
+    <color name="dark_peach">#AA4040</color>
 </resources>
