tests implemented and name issue was inserted to design. TODO : test manually and add README

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="blue_200">#51686E</color>
     <color name="green_a400">#00E676</color>
     <color name="dark_peach">#AA4040</color>
+    <color name="blue_a400">#3D5AFE</color>
 </resources>
