--- a/app/src/main/res/layout-land/activity_new_order.xml
+++ b/app/src/main/res/layout-land/activity_new_order.xml
@@ -65,53 +65,13 @@
         app:layout_constraintBottom_toBottomOf="@id/guideLine_separator"
         />
 
+
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:weightSum="2"
+        android:weightSum="4"
         android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@id/guideLine_separator"
-        android:layout_margin="24dp"
-        android:id="@+id/pickelsLayout"
-        android:background="@drawable/colored_rect_with_rounded_corners"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:padding="16dp"
-        >
-        <TextView
-            android:id="@+id/textViewOfPickles"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/guideLine_separator"
-            android:background="@drawable/colored_rect_with_rounded_corners"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:textColor="@color/black"
-            android:text="Number Of Pickles"
-
-            android:layout_weight="1"
-            />
-
-        <EditText
-            android:id="@+id/pickles_number"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:background="@drawable/colored_rect_with_rounded_corners"
-            android:hint="Number of pickles"
-            android:inputType="numberDecimal"
-            android:textColor="@color/black"
-            app:layout_constraintTop_toBottomOf="@id/guideLine_separator"
-            android:layout_weight="1"
-            />
-
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:weightSum="2"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/pickelsLayout"
         android:layout_margin="24dp"
         android:id="@+id/hummus_n_tahini"
         android:background="@drawable/colored_rect_with_rounded_corners"
@@ -139,6 +99,28 @@
             android:padding="16dp"
             android:layout_weight="1"
             />
+
+        <TextView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Number of pickles"
+        android:layout_weight="1"
+        android:textColor="@color/black"
+            android:layout_marginStart="16dp"
+
+            />
+        <EditText
+            android:id="@+id/pickles_number"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/colored_rect_with_rounded_corners"
+            android:hint="Enter here..."
+            android:inputType="numberDecimal"
+            android:textColor="@color/black"
+            app:layout_constraintTop_toBottomOf="@id/guideLine_separator"
+            android:layout_weight="1"
+            />
+
     </LinearLayout>
 
     <EditText
